# llm-tools-server

./: .gitignore  .pypirc.template  CHANGELOG.md  CLAUDE.md  README.md  WEBUI_FILTER_USAGE.md  example_evaluation.py  lint.sh  publish.sh  publish_test.sh  pyproject.toml  setup.py
.github/workflows/: ci.yml
examples/: rag_eval_hashicorp.py  rag_eval_interactive.py  webui_rag_filter_example.py
llm_api_server/: __init__.py  backends.py  builtin_tools.py  config.py  server.py  webui.py  webui_utils.py
llm_api_server/eval/: __init__.py
llm_api_server/rag/: chunker.py  config.py  contextualizer.py  crawler.py  indexer.py
llm_tools_server/: __init__.py  builtin_tools.py  config.py  server.py
llm_tools_server/eval/: README.md  rag_evaluator.py  rag_test_builder.py
llm_tools_server/rag/: __init__.py  crawler.py  updater.py
roadmap/: 1.0-readiness.md  code-review-2025-11.md  code-review-comprehensive-2025-11.md  incremental-rag-index-updates.md  prioritized-issues-2025-11.md  rag-analysis-2025-11.md  think-parameter-support.md
tests/: README.md  conftest.py  test_backends.py  test_config.py  test_html_report.py  test_rag_crawler.py  test_rag_indexer.py  test_server.py  test_web_search.py  test_webui_utils.py
